Fixed sizing issue on smaller screens, made grid items stack and there's no need to scroll horizontally

--- a/frontend/my-app/src/App.css
+++ b/frontend/my-app/src/App.css
@@ -26,5 +26,6 @@
   color: white;
   /* aspect-ratio: 1 / 0.618; */
   max-height: 100vh;
+  max-width: 100vh;
   border-radius: 5px;
 }
