--- a/frontend/my-app/src/components/TypingAnimation/TypingAnimation.module.css
+++ b/frontend/my-app/src/components/TypingAnimation/TypingAnimation.module.css
@@ -1,10 +1,14 @@
 /* Fullscreen background */
+body {
+  background: black !important;
+}
+
 .landing {
   background-color: black;
   color: white;
   height: 100vh;
-  width: 100vh;
-  display: flex;
+  max-width: 100vh;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   font-family: "Courier New", Courier, monospace;
@@ -14,7 +18,7 @@
 .textWrapper {
   font-size: 1.5rem;
   text-align: center;
-  width: 80%;
+  max-width: 80vh;
   margin: 0 auto;
   color: white;
 }
