--- a/frontend/my-app/src/components/Utils/WordAnimation.css
+++ b/frontend/my-app/src/components/Utils/WordAnimation.css
@@ -60,4 +60,5 @@ body {
 
 .sun-flower {
   color: #f1c40f;
+  transform: translateX(-60px);
 }
